--- a/FlaskServer/templates/main_base.html
+++ b/FlaskServer/templates/main_base.html
@@ -223,7 +223,7 @@
                 </li>
                 <li class="nav-item">
                     <a class="nav-link" href="/chartTable_main">
-                        ???
+                        테이블 통계
                         <span class="sr-only">(current)</span>
                     </a>
                 </li>
